--- a/ldo-mc-vr.tex
+++ b/ldo-mc-vr.tex
@@ -520,7 +520,7 @@ composition of the Rowlands UO$_2$ pin cell benchmark specification
 distributed throughout the homogenized material. The compositions of air,
 carbon steel, and water were taken from the Compendium of  Material
 Composition Data for Radiation Transport Modeling \cite{pnnl}. For this
-scenario, we are intested in the flux solutions at the end of the steel plate.
+scenario, we are interested in the flux solutions at the end of the steel plate.
 
 %%---------------------------------------------------------------------------%%
 \subsection{Dog-Legged Void Neutron (DLVN)}
