--- a/ldo-mc-vr.tex
+++ b/ldo-mc-vr.tex
@@ -83,6 +83,7 @@
 \usepackage[export]{adjustbox}
 \usepackage{tabularx}
 \usepackage{placeins} % for float barriers
+\usepackage{stmaryrd} % for short right arrow
 
 %-------------
 \newcommand{\bo}{\mathbf\Omega}
@@ -94,6 +95,10 @@
 \newcommand{\qhat}{\ensuremath{\hat{q}}}
 \newcommand{\E}[1]{$\times10^{#1}$}
 \newcommand{\fwc}{\mbox{FW-CADIS}}
+\newcommand{\Ye}[2]{\ensuremath{Y^e_{#1}(\bo_#2)}}
+\newcommand{\Yo}[2]{\ensuremath{Y^o_{#1}(\bo_#2)}}
+\newcommand{\sa}{\shortrightarrow}
+\newcommand{\co}{\mbox{CADIS-$\Omega$}}
 
 \begin{document}
 
@@ -158,7 +163,6 @@ Keywords: hybrid methods; transport; Lagrange discrete ordinates
 \pagebreak
 
 %%---------------------------------------------------------------------------%%
-
 \section{Introduction}
 \label{sec:intro}
 
@@ -291,10 +295,44 @@ after the adjoint has been determined, the standard CADIS procedures are used
 to calculate consistent source biasing parameters and weight windows.
 
 %%---------------------------------------------------------------------------%%
+\subsection{Classical Discrete Ordinates (\sn) Equations}
+
+When solving the steady-state Boltzmann transport equation using deterministic
+methods, as is done in the initial phase(s) of a hybrid methods calculation, the
+discrete ordinates, or \sn, approximation is the most commonly-used
+discretization for angle. This approximation is written as
+
+\begin{multline}
+\bo_n \cdot \nabla \psi_n^g(\vecr) + \Sigma_t^g(\vecr)\psi_n^g(\vecr) = \\
+\sum_{g'=0}^{G-1}\sum_{\ell=0}^{P}\Sigma_{s,\ell}^{g'\sa g}(\vecr)
+\bigg[\Ye{\ell 0}{n}\phi_{\ell 0}^{g'}(\vecr) + \sum_{m=1}^{\ell}
+\bigg(\Ye{\ell m}{n}\phi_{\ell m}^{g'}(\vecr) \\
+ + \Yo{\ell m}{n}\vartheta_{\ell m}^{g'}(\vecr)\bigg)\bigg]
++ Q_n^g(\vecr),
+\label{eq:sn}
+\end{multline}
+
+\noindent where a standard multigroup energy approximation is used ($G$ is the
+number of discrete energy groups corresponding to the discretization index
+$g$) and the upper limit of summation for the scattering term spherical
+harmonic expansion, denoted as $P$ in Eq. (\ref{eq:sn}), is known as the
+``\pn\ order''. Angular integration is approximated with the quadrature rule 
+%
+\begin{equation}
+\int_{4\pi} f\left(\bo\right) d\bo \approx \sum_{n=1}^{N}w_n f\left(\bo_n\right).
+\label{eq:quadrule}
+\end{equation}
+%
+where $N$ is the number of ordinates. We refer the reader to Reference
+\ref{denovo} and the references therein for a complete discussion of the
+derivation of the \sn\ equations as well as solution methods for the equations.
+
+%%---------------------------------------------------------------------------%%
 \subsection{Lagrange Discrete Ordinates (LDO) Equations}
 
 The Lagrange Discrete Ordinates (LDO) equations are formally the same as the
-classical \sn\ equations and are written for each discrete angle in the angle set as
+classical \sn\ equations and are written for each discrete angle in the angle
+set as
 
 \begin{multline}
 \bo_n\cdot\nabla\psi_{n}(\vecr,E) + 
@@ -309,7 +347,6 @@ and is a property of the maximum degree of integration of the quadrature set
 on which the equations are based, $L_n$ is the $n^{th}$ Lagrange function, and
 $\Sigma_{s,L}$ is the scattering cross section restricted to maximum degree
 $L$. A full derivation can be found in Reference \cite{ahrens}.
-% you might want to suggest a comparison reference for the Sn equations. If you're not familiar with them, none of this will make any sense. 
 
 The notable differences between the LDO equations and the classical \sn\
 equations can be summarized as:
@@ -334,10 +371,62 @@ fundamental studies of the LDO equations conducted by Ahrens, we
 have chosen to use the extremal point sets developed and distributed by
 Womersley \cite{wom}.
 
-% What I would add here is some description about LDO. No one knows about these and they don't know what they are, how they perform, etc. I'd give some quick descriptions and we should come up with a way to reference your other paper. Depending on the submission timing, we can start by putting that other paper on arxiv after it's submitted and referencing it that way.
-
-% It would be useful to motivate this work a little bit more. I'd add a section here that is past work as a small subsection. Describe some examples of where cadis and fw-cadis didn't work well and what some others have done to try to resovle the problem. That will put this work into context. Otherwise, it's hard to understand what problem you're really solving and if anyone else has looked at this at all. 
+%%---------------------------------------------------------------------------%%
 \subsection{Previous Work}
+
+Substantial effort has been placed into the development and automated
+execution of hybrid methods. This section will discuss previous work in this
+field with a  particular emphasis on hybrid methods  that incorporate neutron
+direction of travel. As CADIS and \fwc\ are the current state of the art in
+Monte Carlo variance reduction parameter generation, we will see that the
+angle-informed hybrid methods are generally variants of CADIS and \fwc.
+
+Noting the marked performance of the CADIS and \fwc\ methods, their limited
+implementation in only space and energy, and the importance of particle
+direction, Peplow introduced directional CADIS in 2012 \cite{peplow}. Two
+versions of directional CADIS were explored: one method that biases the source
+in space and energy while preserving the original angular distribution of the
+particles, and one method that biases the source in space, energy, and angle.
+Both new methods were tested against standard CADIS for seven example
+problems, with the Monte Carlo FOM compared among the methods for each
+problem. For most of these problems, directional CADIS outperformed standard
+CADIS, increasing the Monte Carlo FOM by a factor of around 2. Notable cases
+in which directional CADIS performed more poorly than standard CADIS are a
+neutron porosity tool problem and a gamma-ray litho-density tool problem with
+the detector far away from the source. It should also be noted that, for a
+spherical boat test problem with a source far away from the boat, both
+standard CADIS and directional CADIS performed more poorly than an analog
+Monte Carlo calculation. For full details on the test results, we refer the
+reader to Reference \cite{peplow}. In the conclusions of the report, Peplow
+notes that ``it is difficult to know \textit{a priori} which problems would
+benefit  from the space/energy/angular treatments presented in this work more
+than from just using the standard space/energy CADIS.''
+
+One of the most recent developments in the area of angle-informed hybrid
+methods is \co, introduced by Munk et al.\ in 2016 \cite{cadisom}. This method
+calculates an alternate form of the adjoint scalar flux quantity that is then
+used in the CADIS and \fwc\ methods for generation of variance reduction
+parameters for local and global response functions, respectively. The \co\
+method was implemented in the ADVANTG framework, with numerical experiments
+performed testing variance reduction for problems run in MCNP5. Several
+characterization problems with spatially-induced anisotropies were tested to
+evaluate the new method when used with CADIS and \fwc. Munk identified three
+categories of processes that affect particle flux  anisotropy: strongly
+directional particle sources, strong differences between material properties,
+and algorithmic limitations that result in ray effects. Having grouped these
+processes, Munk tested a set of characterization problems, each of which have
+different combinations of the above anisotropy-inducing mechanisms. Munk also
+developed a set of metrics by which the anisotropy of the flux may be
+quantified over the various problems. Similar to the conclusions drawn by
+Peplow, Munk found that it was difficult to predict for which problems \co\
+should outperform CADIS. When considering a parametric study of deterministic
+variables likely to affect angular flux (varying quadrature set order and \pn\
+order) in a characteristic problem composed of a steel beam embedded in
+concrete, \co\ achieved higher FOM values than standard CADIS for all
+quadrature and \pn\ orders at high energies. Similarly, for a simple labyrinth
+geometry of an air maze through a concrete block, \co\ achieved lower relative
+errors than did standard CADIS in the epithermal and fast neutron energy
+groups.
 
 %%---------------------------------------------------------------------------%%
 \section{Test Cases and Calculation Parameters}
